<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cvCARD_LAYANAN"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCARD_LAYANAN_ID"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#016113"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/ID_Layanan"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvCARD_LAYANAN_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namalayanan"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tvCARD_LAYANAN_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textSize="14sp"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:id="@+id/tvCARD_LAYANAN_cabang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_cabang"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"/>

            <!-- Tombol Aksi -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_hubungi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_hubungi"
                    android:backgroundTint="#22D10B"
                    android:textColor="@android:color/white"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btn_lihat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/card_lihat"
                    android:backgroundTint="#E77A1B"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
