<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cvCARD_CABANG"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCARD_CABANG_ID"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#D74B06"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/ID_Cabang"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvCARD_CABANG_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namaCabang"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tvCARD_CABANG_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_alamat"
                android:textSize="14sp"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:id="@+id/tvCARD_CABANG_nohp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_nohp"
                android:textSize="14sp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
