<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:padding="10dp"
            card_view:cardPreventCornerOverlop="false"
            card_view:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDIALOG_MOD_PELANGGAN_judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingStart="10dp"
                    android:paddingBottom="5dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="Detail Pelanggan"/>

                <LinearLayout
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_pelanggan"
                        android:textAlignment="textStart"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/card_pelanggan"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_namapelanggan"
                        android:textAlignment="textStart"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/card_namapelanggan"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_alamat"
                        android:textAlignment="textStart"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/card_alamat"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/card_nohp"
                        android:textAlignment="textStart"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/card_nohp"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:paddingHorizontal="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_cabang"
                        android:textAlignment="textStart"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cabang"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btSunting"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:text="@string/Sunting"
                        android:backgroundTint="#FFC107"
                        app:icon="@drawable/square"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btHapus"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btHapus"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:text="@string/Hapus"
                        app:icon="@drawable/delete"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btSunting"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>